// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should create shapshot of when loading is false 1`] = `
<DocumentFragment>
  <div
    aria-hidden="true"
    class="rmnljus fui-OverlayDrawer__backdrop ___mgf8q40_1ccxybz f1euv43f"
  />
  .emotion-0 {
  font-size: 1rem;
  line-height: 1rem;
}

.emotion-1 {
  margin-bottom: 1rem;
}

<aside
    aria-labelledby="dialog-title-r6"
    aria-modal="true"
    class="fui-OverlayDrawer r7dfyj8 ___12p5wfa_jv28t00 fsqykmd f1e31b4d frppm18 f1exhnwo f1euv43f"
    data-tabster="{"restorer":{"type":0},"modalizer":{"id":"modal-r5","isOthersAccessible":false,"isTrapped":true}}"
    role="dialog"
    tabindex="-1"
  >
    <header
      class="fui-DrawerHeader r3ovn4i"
      role="none"
    >
      <div
        class="fui-DrawerHeaderTitle ___1g6dz7n_17w6zju f22iagw f1869bpl f122n59 fsnqrgy"
      >
        <h2
          class="fui-DrawerHeaderTitle__heading fui-DialogTitle rxjm636"
          id="dialog-title-r6"
        >
          <div
            data-testid="Title"
          />
        </h2>
        <div
          class="fui-DrawerHeaderTitle__action fui-DialogTitle__action r13kcrze ___zdrx2v0_7c5v900 faqnl2i"
        >
          <button
            aria-label="Close"
            class="fui-Button r1alrhcs ___w3o4yv0_df8ghi0 fhovq9v f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb f1t94bn6 f1s2uweq fr80ssc f1ukrpxl fecsdlb fnwyq0v ft1hn21 fuxngvv fy5bs14 fsv2rcd f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1omzyqd f1dfjoow f1j98vj9 fj8yq94 f4xjyn1 f1et0tmh f9ddjv3 f1wi8ngl f18ktai2 fwbmr0d f44c6la"
            type="button"
          >
            <span
              class="fui-Button__icon rywnvv2"
            >
              <span
                aria-hidden="true"
                class="root_dd790ee3 emotion-0"
              >
                <svg
                  class="svg_dd790ee3"
                  focusable="false"
                  viewBox="0 0 2048 2048"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M1115 1024l690 691-90 90-691-690-691 690-90-90 690-691-690-691 90-90 691 690 691-690 90 90-690 691z"
                  />
                </svg>
              </span>
            </span>
          </button>
        </div>
      </div>
    </header>
    <div
      class="fui-DrawerBody ri6rvx7 emotion-1"
      role="group"
      tabindex="0"
    >
      <div
        data-testid="Content"
      />
    </div>
  </aside>
  .emotion-0 {
  min-height: 100vh;
  line-height: 1.25em;
  background-color: #f5f5f5;
}

<div
    class="fui-FluentProvider fui-FluentProviderr4 ___jdtuxv0_17k0bs4 f19n0e5 fxugw4r f1o700av fk6fouc fkhj508 figsok6 f1i3iumi"
    dir="ltr"
  >
    <div
      class="emotion-0"
    >
      <span
        hidden=""
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`should create shapshot of when loading is true 1`] = `
<DocumentFragment>
  <div
    aria-hidden="true"
    class="rmnljus fui-OverlayDrawer__backdrop ___mgf8q40_1ccxybz f1euv43f"
  />
  .emotion-0 {
  font-size: 1rem;
  line-height: 1rem;
}

.emotion-1 {
  margin-bottom: 1rem;
}

<aside
    aria-labelledby="dialog-title-r2"
    aria-modal="true"
    class="fui-OverlayDrawer r7dfyj8 ___12p5wfa_jv28t00 fsqykmd f1e31b4d frppm18 f1exhnwo f1euv43f"
    data-tabster="{"restorer":{"type":0},"modalizer":{"id":"modal-r1","isOthersAccessible":false,"isTrapped":true}}"
    role="dialog"
    tabindex="-1"
  >
    <header
      class="fui-DrawerHeader r3ovn4i"
      role="none"
    >
      <div
        class="fui-DrawerHeaderTitle ___1g6dz7n_17w6zju f22iagw f1869bpl f122n59 fsnqrgy"
      >
        <h2
          class="fui-DrawerHeaderTitle__heading fui-DialogTitle rxjm636"
          id="dialog-title-r2"
        >
          <div
            data-testid="Title"
          />
        </h2>
        <div
          class="fui-DrawerHeaderTitle__action fui-DialogTitle__action r13kcrze ___zdrx2v0_7c5v900 faqnl2i"
        >
          <button
            aria-label="Close"
            class="fui-Button r1alrhcs ___w3o4yv0_df8ghi0 fhovq9v f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb f1t94bn6 f1s2uweq fr80ssc f1ukrpxl fecsdlb fnwyq0v ft1hn21 fuxngvv fy5bs14 fsv2rcd f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1omzyqd f1dfjoow f1j98vj9 fj8yq94 f4xjyn1 f1et0tmh f9ddjv3 f1wi8ngl f18ktai2 fwbmr0d f44c6la"
            type="button"
          >
            <span
              class="fui-Button__icon rywnvv2"
            >
              <span
                aria-hidden="true"
                class="root_dd790ee3 emotion-0"
              >
                <svg
                  class="svg_dd790ee3"
                  focusable="false"
                  viewBox="0 0 2048 2048"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M1115 1024l690 691-90 90-691-690-691 690-90-90 690-691-690-691 90-90 691 690 691-690 90 90-690 691z"
                  />
                </svg>
              </span>
            </span>
          </button>
        </div>
      </div>
    </header>
    <div
      class="fui-DrawerBody ri6rvx7 emotion-1"
      role="group"
      tabindex="0"
    >
      <div
        class="fui-Spinner r82apo5"
        role="progressbar"
      >
        <span
          class="fui-Spinner__spinner rvgcg50 ___1xxu43e_eahmz60 f1d2rq10 f1szoe96 fb52u90"
        >
          <span
            class="fui-Spinner__spinnerTail rxov3xa"
          />
        </span>
      </div>
    </div>
  </aside>
  .emotion-0 {
  min-height: 100vh;
  line-height: 1.25em;
  background-color: #f5f5f5;
}

<div
    class="fui-FluentProvider fui-FluentProviderr0 ___jdtuxv0_17k0bs4 f19n0e5 fxugw4r f1o700av fk6fouc fkhj508 figsok6 f1i3iumi"
    dir="ltr"
  >
    <div
      class="emotion-0"
    >
      <span
        hidden=""
      />
    </div>
  </div>
</DocumentFragment>
`;
